--- a/mcu/hands_on_main_app/hands_on_main_app.ioc
+++ b/mcu/hands_on_main_app/hands_on_main_app.ioc
@@ -9,6 +9,8 @@ ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
+AES.Data\ encryption\ types\ list=AESCBC
+AES.IPParameters=Data encryption types list
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -44,14 +46,15 @@ LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32L4A6ZGT6
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
-Mcu.IP1=DMA
-Mcu.IP2=LPUART1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=TIM3
-Mcu.IPNb=8
+Mcu.IP1=AES
+Mcu.IP2=DMA
+Mcu.IP3=LPUART1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=TIM3
+Mcu.IPNb=9
 Mcu.Name=STM32L4A6ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -73,8 +76,9 @@ Mcu.Pin22=PA13 (JTMS/SWDIO)
 Mcu.Pin23=PA14 (JTCK/SWCLK)
 Mcu.Pin24=PB3 (JTDO/TRACESWO)
 Mcu.Pin25=PB7
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin26=VP_AES_VS_AES
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PH1-OSC_OUT (PH1)
 Mcu.Pin4=PC0
 Mcu.Pin5=PA0
@@ -82,7 +86,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PF13
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4A6ZGTx
@@ -312,6 +316,8 @@ TIM3.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM3.Period=195
 TIM3.Prescaler=1
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+VP_AES_VS_AES.Mode=AES_Activate
+VP_AES_VS_AES.Signal=AES_VS_AES
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
